[package]
name = "version-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
clap = { version = "4.2.5", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "revtool"
path = "app/main.rs"
